<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LiquidPartsActivity!</string>

    <string name="app_name">Liquid Parts</string>
    <string-array name="settings">
        <item >Tweaks</item>
        <item >Swap</item>
    </string-array>
    <string-array name="help">
        <item >f.a.q.</item>
        <item >problems</item>
        <item >donate</item>
    </string-array>
    <string-array name="info">
        <item >&lt;b&gt;How does Liquid Parts work?&lt;/b&gt;&lt;br&gt;
It works by editing system files, with help super user. So if you want use it you need to get root rights.&lt;br&gt;&lt;br&gt;
&lt;b&gt;Who is developer of this app?&lt;/b&gt;&lt;br&gt;
Virgin developer Suxsem, after Thepasto, developer of this version RomzesRover&lt;br&gt;&lt;br&gt;
&lt;b&gt;What can I do here&lt;/b&gt;&lt;br&gt;
• Edit sensivity for touchscreen and for softkeys&lt;br&gt;
• Edit noise for touchscreen&lt;br&gt;
• Turn on or turn off for Haptick Feedback&lt;br&gt;
• Edit vibration strenght for softkeys&lt;br&gt;
• Turn on or turn off for swap&lt;br&gt;
• Edit swappiness&lt;br&gt;
• edit sdCardReadAhead</item>
 <item >&lt;b&gt;I can\'t apply new settings&lt;/b&gt;&lt;br&gt;
• Try to check does you grant superuser rights to this app&lt;br&gt;
• Try to restart this app&lt;br&gt;&lt;br&gt;
&lt;b&gt;After applying new settings touch become crazy&lt;/b&gt;&lt;br&gt;
• Try to return the settings to default&lt;br&gt;
• Flash stock rom from 2.1 or 2.2</item>
	<item>&lt;b&gt;RomzesRover:&lt;/b&gt; (current developer)&lt;br&gt;
• PayPal: romzesrover@gmail.com&lt;br&gt;		
• Yandex money: 41001630559136&lt;br&gt;
• Play market: &lt;a href="market://search?q=pub:BigBrother\'sRover\'s&gt;BigBrother\'sRover\'s&lt;/a&gt;&lt;br&gt;&lt;br&gt;
&lt;b&gt;ThePasto:&lt;/b&gt;&lt;br&gt;
• PayPal: thepasto@gmail.com&lt;br&gt;&lt;br&gt;
&lt;b&gt;[ray:&lt;/b&gt;&lt;br&gt;
• WebMoney: R300598343390&lt;br&gt;
• WebMoney: Z939099130798
	    </item>
    </string-array>
    <string-array name="sdaheads">
        <item>512</item>
        <item>1024</item>
        <item>2048</item>
        <item>4096</item>
    </string-array>
    <string name="separator"/>
    <string name="sens">Sensivity</string>
    <string name="vibtime">VibrationTime</string>
    <string name="hf">HaptickFeedBack</string>
    <string name="softk">SoftKeys</string>
    <string name="noise">Noise</string>
    <string name="touchscreen">TouchScreen</string>
    <string name="help">Help</string>
    <string name="save">Save and Apply</string>
    <string name="swap">Swap</string>
    <string name="enabled">Enabled</string>
    <string name="Swappiness">Swappiness</string>
    <string name="other">Other</string>
    <string name="sdcard">SdCardReadAhead</string>
    <string name="lowMem">LowMemoryKillerFix (for A1)</string>

<string name="tfsf">[25-75]</string>
<string name="fzsf">[50-75]</string>
<string name="oznn">[10-99]</string>
<string name="oftz">[15-20]</string>
<string name="zonn">[01-99]</string>

</resources>
