
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
<LinearLayout
    android:focusable="true" android:focusableInTouchMode="true"
    android:layout_width="0px" android:layout_height="0px"/>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/swap"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#666666"
                        android:contentDescription="@string/separator" />

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:id="@+id/LinearLayout15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/TextView09"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/enabled"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="#ccc" />

                                <LinearLayout
                                    android:id="@+id/LinearLayout16"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="horizontal" >

                                    <LinearLayout
                                        android:id="@+id/LinearLayout14"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical" >

                                        <CheckBox
                                            android:id="@+id/checkBoxSwap"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="right"
                                            android:paddingRight="5dp" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/ImageView05"
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#666666"
                                android:contentDescription="@string/separator" />

                            <LinearLayout
                                android:id="@+id/LinearLayout02"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/TextView01"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/Swappiness"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="#ccc" />

                                <LinearLayout
                                    android:id="@+id/LinearLayout01"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="horizontal" >

                                    <TextView
                                        android:id="@+id/textView3"
                                        android:layout_width="142dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right|center"
                                        android:layout_weight="1"
                                        android:gravity="right"
                                        android:paddingRight="10dp"
                                        android:text="@string/zonn"
                                        android:textAppearance="?android:attr/textAppearanceSmall"
                                        android:textColor="#AAA" />

                                    <LinearLayout
                                        android:id="@+id/linearLayout4"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical" >

                                        <EditText
                                            android:id="@+id/editTextSwappiness"
                                            android:layout_width="50dp"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="right"
                                            android:layout_marginBottom="4dp"
                                            
                                            android:gravity="center"
                                            android:inputType="number"
                                            android:maxLength="2"
                                             />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#666666"
                                android:contentDescription="@string/separator" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#666666"
                        android:contentDescription="@string/separator" />

                    <LinearLayout
                        android:id="@+id/LinearLayout05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/LinearLayout06"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:id="@+id/LinearLayout08"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/TextView05"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/sdcard"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="#ccc" />

                                <LinearLayout
                                    android:id="@+id/LinearLayout09"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="horizontal" >

                                    <LinearLayout
                                        android:id="@+id/LinearLayout04"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical" >

                                        <Spinner
                                            android:id="@+id/spinner1"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_column="1"
                                            android:layout_gravity="right"
                                            android:layout_row="0"
                                            android:gravity="right" />

                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/ImageView02"
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#666666"
                                android:contentDescription="@string/separator" />

                            <Button
                                android:id="@+id/Button01"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/save" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
